@@ -28,6 +28,43 @@ class HTTPResponseTests(unittest.TestCase):
             response.setStatus(exc_type)
             self.assertEqual(response.status, code)
 
+    def test_setCookie(self):
+        response = self._makeOne()
+        response.setCookie('foo', 'bar', path='/')
+        cookie = response.cookies.get('foo', None)
+        self.failUnless(cookie)
+        self.assertEqual(cookie.get('value'), 'bar')
+        self.assertEqual(cookie.get('path'), '/')
+
+    def test_expireCookie(self):
+        response = self._makeOne()
+        response.expireCookie('foo', path='/')
+        cookie = response.cookies.get('foo', None)
+        self.failUnless(cookie)
+        self.assertEqual(cookie.get('expires'), 'Wed, 31-Dec-97 23:59:59 GMT')
+        self.assertEqual(cookie.get('max_age'), 0)
+        self.assertEqual(cookie.get('path'), '/')
+
+    def test_expireCookie1160(self):
+        # Verify that the cookie is expired even if an expires kw arg is passed
+        # http://zope.org/Collectors/Zope/1160
+        response = self._makeOne()
+        response.expireCookie('foo', path='/', expires='Mon, 22-Mar-2004 17:59 GMT', max_age=99)
+        cookie = response.cookies.get('foo', None)
+        self.failUnless(cookie)
+        self.assertEqual(cookie.get('expires'), 'Wed, 31-Dec-97 23:59:59 GMT')
+        self.assertEqual(cookie.get('max_age'), 0)
+        self.assertEqual(cookie.get('path'), '/')
+
+    def test_appendCookie(self):
+        response = self._makeOne()
+        response.setCookie('foo', 'bar', path='/')
+        response.appendCookie('foo', 'baz')
+        cookie = response.cookies.get('foo', None)
+        self.failUnless(cookie)
+        self.assertEqual(cookie.get('value'), 'bar:baz')
+        self.assertEqual(cookie.get('path'), '/')
+
 def test_suite():
     suite = unittest.TestSuite()
     suite.addTest(unittest.makeSuite(HTTPResponseTests, 'test'))
