@@ -105,6 +105,9 @@ Zope Changes
 
     Bugs fixed
 
+     - Collector #1160: HTTPResponse.expireCookie() potentially didn't
+       when an 'expires' keyword argument was passed.
+
      - Collector #1289: Allow ZSQL methods to be edited via WebDAV.
 
      - WebDAV property values were not being properly escaped on
